--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+# Jekyll and GH related
+_gh_pages
 _site
-*.swp
+.ruby-version
 .jekyll-metadata
+
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.zip
+*.vi
+*~
+*.bak
+
+# OS or Editor folders
+.DS_Store
+._*
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+.idea
